-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.2, Lustre 2.7.0
-
CentOS 6.4, ZFS 0.6.2
-
3
-
13075
When creating ZFS-backed OSTs using the --servicenode syntax, only one failover nids is stored.
mkfs.lustre --ost --index=1 --fsname=saturn --backfstype=zfs --mgsnode=192.168.122.73@tcp --servicenode=192.168.122.76@tcp --servicenode=192.168.122.78@tcp lsrv3/saturn-ost1
- tunefs.lustre --print lsrv3/saturn-ost1
checking for existing Lustre data: found
Read previous values:
Target: saturn-OST0001
Index: 1
Lustre FS: saturn
Mount type: zfs
Flags: 0x1002
(OST no_primnode )
Persistent mount opts:
Parameters: failover.node=192.168.122.78@tcp mgsnode=192.168.122.73@tcp
Permanent disk data:
Target: saturn-OST0001
Index: 1
Lustre FS: saturn
Mount type: zfs
Flags: 0x1002
(OST no_primnode )
Persistent mount opts:
Parameters: failover.node=192.168.122.78@tcp mgsnode=192.168.122.73@tcp
On MGS:
- lctl get_param osp.saturn-OST0001-osc-MDT0000.import
osp.saturn-OST0001-osc-MDT0000.import=
import:
name: saturn-OST0001-osc-MDT0000
target: saturn-OST0001_UUID
state: FULL
instance: 1
connect_flags: [lov_index, unused, version, request_portal, adaptive_timeouts, lru_resize, fid_is_enabled, skip_orphan, full20, lvb_type]
import_flags: [replayable, pingable]
connection:
failover_nids: [192.168.122.78@tcp]
current_connection: 192.168.122.78@tcp
For a ldiskfs-backed OST, two NIDs are stored:
- mkfs.lustre --ost --index=0 --fsname=saturn --servicenode=192.168.122.76@tcp --mgsnode=192.168.122.73@tcp --reformat /dev/vdb
- tunefs.lustre --print /dev/vdb
checking for existing Lustre data: found
Reading CONFIGS/mountdata
Read previous values:
Target: saturn-OST0000
Index: 0
Lustre FS: saturn
Mount type: ldiskfs
Flags: 0x1002
(OST no_primnode )
Persistent mount opts: errors=remount-ro
Parameters: failover.node=192.168.122.76@tcp failover.node=192.168.122.78@tcp mgsnode=192.168.122.73@tcp
Permanent disk data:
Target: saturn-OST0000
Index: 0
Lustre FS: saturn
Mount type: ldiskfs
Flags: 0x1002
(OST no_primnode )
Persistent mount opts: errors=remount-ro
Parameters: failover.node=192.168.122.76@tcp failover.node=192.168.122.78@tcp mgsnode=192.168.122.73@tcp
exiting before disk write.
- lctl get_param osp.saturn-OST0000-osc-MDT0000.import
osp.saturn-OST0000-osc-MDT0000.import=
import:
name: saturn-OST0000-osc-MDT0000
target: saturn-OST0000_UUID
state: FULL
instance: 2
connect_flags: [lov_index, unused, version, request_portal, adaptive_timeouts, lru_resize, fid_is_enabled, skip_orphan, full20, lvb_type]
import_flags: [replayable, pingable]
connection:
failover_nids: [192.168.122.76@tcp, 192.168.122.78@tcp]
current_connection: 192.168.122.76@tcp